$Id$


NetGrowler 0.2.4 (released ?? Nov 2007)
----------------

* Fixes for OS X 10.5 Leopard:
  - Updated icon references.

NetGrowler 0.2.3 (released 18 Aug 2007)
----------------

* Universal build.

* New icons from Jeremy Cutler <cutler@eecg.toronto.edu>.

* Remove hardcoded interface names, also thanks to
  Jeremy Cutler <cutler@eecg.toronto.edu>.

NetGrowler 0.2.2 (released 13 May 2005)
----------------

* Fixed error encountered by Augie Fackler <rafackler@hillsdale.edu>:
  Masks other than /16 were not calculated correctly. In particular,
  10.x.y.z, for x.y != 0.0, was not considered as being within the RFC1918
  address range 10.0.0.0/8.

* Eliminated some warnings when compiling under Tiger.


NetGrowler 0.2.1 (released 20 Apr 2005)
----------------

* Less noise on waking from sleep.
* Preliminary support for PPP notifications (not working well yet).
* Less hardcoded stuff. (Ethernet is still hardcoded as en0 due to some
  SystemConfiguration weirdness.)
* Code reorganization.

NetGrowler 0.2.0 (released 3 Mar 2005)
----------------

* Upgraded to Growl 0.6.1 (Growl.framework) from 0.5 (GrowlAppBridge.framework)

* Added type to IP address notifications. (Public, private, link-local, etc.)


NetGrowler 0.1.0 (released 4 Feb 2005)
----------------

* Initial version.